# test_time_compute

./: .gitignore  Makefile  README.md  __init__.py  __main__.py  aggregate.py  allocate.py  core.py  dataset.py  extract.py  llm.py  prompts.py  pyproject.toml  verifier.py
.github/workflows/: test.yml
tests/: test_aggregate.py  test_allocate.py  test_core.py  test_dataset.py  test_extract.py  test_llm.py  test_verifier.py
